--- a/module/ABKCommon/CHANGES
+++ b/module/ABKCommon/CHANGES
@@ -97,4 +97,4 @@
  5.4  020824   ilm ported to g++ 3.1.1
                ilm fixed to abkguess3()
 
-03/28/2020 cherry remove all sgi code
+03/28/2020 cherry remove all sgi hash code, abklimiits.h
