--- a/module/ABKCommon/CHANGES
+++ b/module/ABKCommon/CHANGES
@@ -97,4 +97,10 @@
  5.4  020824   ilm ported to g++ 3.1.1
                ilm fixed to abkguess3()
 
-03/28/2020 cherry remove all sgi hash code, abklimiits.h
+03/28/2020 cherry
+ remove sgi_hash_map.h
+ remove sgi_hash_set.h
+ remove abkstring.h
+ remove abklimiits.h
+ remove all sun conditions
+
